nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/symfony-6-docker-main-default: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
            - containerPort: 443
              hostPort: 443
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www
              name: nginx-claim0
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-claim1
            - mountPath: /etc/nginx/sites-available
              name: nginx-claim2
            - mountPath: /etc/nginx/conf.d
              name: nginx-claim3
            - mountPath: /var/log
              name: nginx-claim4
      restartPolicy: Always
      volumes:
        - name: nginx-claim0
          persistentVolumeClaim:
            claimName: nginx-claim0
        - name: nginx-claim1
          persistentVolumeClaim:
            claimName: nginx-claim1
        - name: nginx-claim2
          persistentVolumeClaim:
            claimName: nginx-claim2
        - name: nginx-claim3
          persistentVolumeClaim:
            claimName: nginx-claim3
        - name: nginx-claim4
          persistentVolumeClaim:
            claimName: nginx-claim4
status: {}
