phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/symfony-6-docker-main-default: "true"
        io.kompose.service: phpmyadmin
    spec:
      containers:
        - env:
            - name: PMA_ARBITRARY
              value: "1"
            - name: PMA_HOST
              value: database
            - name: PMA_PORT
              value: "3306"
          image: phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
