database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: "3309"
      port: 3309
      targetPort: 3306
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
