ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poleitingress
  labels:
    name: poleitingress
spec:
  rules:
  - host: poleit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
